# tg_tunnel

./: .deploy.yaml  .dockerignore  .env.example  .gitignore  .sre-support.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  channel_comm_MVP.txt  chat-usage.md  docker-compose.yml  minimal_poller.py  prompt-usage.md  pyproject.toml  telegram_prompt_api.code-workspace  test_output.txt
.claude/: settings.local.json
.claude/tasks/: MVP_NEXT_ITERATION.md
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  SECURITY.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml
.github/workflows/: ci.yml  deploy.yml
scripts/: add_channels.sql  fresh_start.py  init_db.sql  update_ids.sql
src/tg_gateway/: cli.py
src/tg_gateway/api/v1/: prompts.py
src/tg_gateway/core/: config.py  security.py
src/tg_gateway/services/channels/: poller.py
src/tg_gateway/services/prompts/: models.py  service.py
src/tg_prompt_api/: api.py  cli.py  config.py  event_loop.py  models.py  notifier.py  schemas.py  telegram_bot.py  util.py
src/tg_prompt_api/api/: app.py
src/tg_prompt_api/api/v1/: channels.py  prompts.py
src/tg_prompt_api/core/: config.py  event_loop.py  notifier.py  security.py  telegram_bot.py  util.py
src/tg_prompt_api/services/channels/: models.py  poller.py  schemas.py  service.py
src/tg_prompt_api/services/prompts/: handlers.py  models.py  schemas.py  service.py
src/tg_tunnel/: cli.py
src/tg_tunnel/api/: app.py
src/tg_tunnel/core/: db.py  notifier.py  security.py  telegram_bot.py
src/tg_tunnel/services/prompts/: handlers.py  service.py
tests/: conftest.py
tests/api/: conftest.py  test_auth.py  test_channels_api.py  test_prompts_api.py
tests/services/: test_channel_models.py  test_prompt_models.py
tests/unit/: test_config.py  test_util.py
