[project]
name = "tg-prompt-api"
version = "0.1.9"
description = "Generic ask/collect/notify Telegram prompt API with FastAPI + aiogram + Postgres"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "aiogram>=3.13.1",
    "httpx>=0.27.0",
    "psycopg[binary]>=3.2.1",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.2",
    "tenacity>=9.0.0",
    "python-dotenv>=1.0.1",
    "typer>=0.12.5",
    "ulid-py>=1.1.0",
    "python-multipart>=0.0.20",
]

[project.scripts]
prompt-cli = "tg_prompt_api.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.3.2",
    "ruff>=0.6.7",
]

[tool.ruff]
line-length = 100

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tg_prompt_api"]
