[project]
name = "tg-gateway"
version = "0.1.40"
description = "Self-hosted HTTP gateway that gives AI agents a direct line to Telegram — send prompts, collect answers, bridge two-way conversations"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "aiogram>=3.13.1",
    "httpx>=0.27.0",
    "psycopg[binary]>=3.2.1",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.2",
    "tenacity>=9.0.0",
    "python-dotenv>=1.0.1",
    "typer>=0.12.5",
    "python-multipart>=0.0.20",
    "pygments>=2.20.0",
]

[project.scripts]
prompt-cli = "tg_gateway.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.3.2",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.6.7",
    "mypy>=1.20.0",
    "pytest-cov>=7.1.0",
    "pip-audit>=2.10.0",
]

[tool.ruff]
line-length = 100

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tg_gateway"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
